index Создана основа разметки для шапки

--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
 </head>
 <body>
 
+<section class="container">
+
+    <header class="header">
+
+        <div class="header_top"></div>
+
+        <nav class="header_nav"></nav>
+
+        <div class="header_bottom"></div>
+
+    </header>
+
+    <main class="main"></main>
+
+    <footer class="footer"></footer>
+
+</section>
 
 <script src="js/common.js"></script>
 </body>
