.header_top Основа html/css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
     <header class="header">
 
-        <div class="header_top"></div>
+        <div class="header_top">
+            <h2 class="header_top_h2">Главная</h2>
+            <button class="header_top_button">Выход</button>
+            <p class="header_top_p">Администратор</p>
+        </div>
 
         <nav class="header_nav"></nav>
 
