.header_nav Основа html/css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
             <p class="header_top_p">Администратор</p>
         </div>
 
-        <nav class="header_nav"></nav>
+        <nav class="header_nav">
+            <button class="header_nav_button">Все заведения</button>
+            <button class="header_nav_button">Логи</button>
+            <button class="header_nav_button">Добавить Модератора</button>
+            <button class="header_nav_button">Почта</button>
+            <button class="header_nav_button">Настройки</button>
+            <button class="header_nav_button">Добавить Заведение</button>
+        </nav>
 
         <div class="header_bottom"></div>
 
