--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <button class="header_nav_button">Добавить Заведение</button>
         </nav>
 
-        <div class="header_bottom"></div>
+        <div class="header_bottom">
+            <span class="header_bottom_span"></span>
+        </div>
 
     </header>
 
