.footer Основа html/css

--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@
 
     <main class="main"></main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+
+        <div class="footer_top">
+            <span class="footer_top_span"></span>
+        </div>
+        <div class="footer_content"></div>
+
+    </footer>
 
 </section>
 
