--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
 
     </header>
 
-    <main class="main"></main>
+    <main class="main">
+
+        <h3 class="main_h3">Данные для обратной связи:</h3>
+        <p class="main_p">Евгений</p>
+        <p class="main_p">8 912 854 96 89</p>
+        <p class="main_p">info@3dmenu.ru</p>
+        <p class="main_p">Ижевск</p>
+
+    </main>
 
     <footer class="footer">
 
