--- a/admin/main/main.html
+++ b/admin/main/main.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/basic.css">
+    <link rel="stylesheet" href="../../css/basic.css">
 </head>
 <body>
 
@@ -56,6 +56,6 @@
 
 </section>
 
-<script src="js/common.js"></script>
+<script src="../../js/common.js"></script>
 </body>
 </html>
