/admin/main/ .header

--- a/admin/main/logs.html
+++ b/admin/main/logs.html
@@ -15,7 +15,8 @@
     <header class="header">
 
         <div class="header_top">
-            <h2 class="header_top_h2">Главная</h2>
+            <h2 class="header_top_h2">Логи</h2>
+            <button class="header_top_button-back">Назад</button>
             <button class="header_top_button">Выход</button>
             <p class="header_top_p">Администратор</p>
         </div>
