/admin/main/ .footer

--- a/admin/main/institutions.html
+++ b/admin/main/institutions.html
@@ -51,7 +51,14 @@
         <div class="footer_top">
             <span class="footer_top_span"></span>
         </div>
-        <div class="footer_content"></div>
+        <div class="footer_content">
+            <select class="footer_content_select">
+                <option class="footer_content_option">Ижевск</option>
+                <option class="footer_content_option">Иркутс</option>
+                <option class="footer_content_option">Тамань</option>
+                <option class="footer_content_option">Владивосток</option>
+            </select>
+        </div>
 
     </footer>
 
