--- a/admin/main/mail.html
+++ b/admin/main/mail.html
@@ -51,7 +51,16 @@
         <div class="footer_top">
             <span class="footer_top_span"></span>
         </div>
-        <div class="footer_content"></div>
+        <div class="footer_content">
+            <button class="footer_content_button">Отправить</button>
+
+            <select class="footer_content_select">
+                <option class="footer_content_option">Клиент 1</option>
+                <option class="footer_content_option">Клиент 2</option>
+                <option class="footer_content_option">Клиент 3</option>
+                <option class="footer_content_option">Клиент 4</option>
+            </select>
+        </div>
 
     </footer>
 
