--- a/admin/main/settings.html
+++ b/admin/main/settings.html
@@ -51,7 +51,9 @@
         <div class="footer_top">
             <span class="footer_top_span"></span>
         </div>
-        <div class="footer_content"></div>
+        <div class="footer_content">
+            <button class="footer_content_button">Сохранить</button>
+        </div>
 
     </footer>
 
