--- a/admin/main/institutions.html
+++ b/admin/main/institutions.html
@@ -38,11 +38,65 @@
 
     <main class="main">
 
-        <h3 class="main_h3">Данные для обратной связи:</h3>
-        <p class="main_p">Евгений</p>
-        <p class="main_p">8 912 854 96 89</p>
-        <p class="main_p">info@3dmenu.ru</p>
-        <p class="main_p">Ижевск</p>
+        <section class="main_list">
+
+            <h3 class="main_list_h3">Администратор</h3>
+
+            <div class="main_list_item">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
+                <button class="main_list_item_button">Пароль</button>
+                <button class="main_list_item_button">Удалить</button>
+            </div>
+
+            <div class="main_list_item">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
+                <button class="main_list_item_button">Пароль</button>
+                <button class="main_list_item_button">Удалить</button>
+            </div>
+
+            <div class="main_list_item">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
+                <button class="main_list_item_button">Пароль</button>
+                <button class="main_list_item_button">Удалить</button>
+            </div>
+
+        </section>
+
+        <section class="main_list">
+
+            <h3 class="main_list_h3">Модератор 1</h3>
+
+            <div class="main_list_item">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
+                <button class="main_list_item_button">Пароль</button>
+                <button class="main_list_item_button">Удалить</button>
+            </div>
+
+            <div class="main_list_item">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
+                <button class="main_list_item_button">Пароль</button>
+                <button class="main_list_item_button">Удалить</button>
+            </div>
+
+        </section>
+
+        <section class="main_list">
+
+            <h3 class="main_list_h3">Модератор 2</h3>
+
+            <div class="main_list_item">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
+                <button class="main_list_item_button">Пароль</button>
+                <button class="main_list_item_button">Удалить</button>
+            </div>
+
+        </section>
 
     </main>
 
