--- a/admin/main/addInstitution.html
+++ b/admin/main/addInstitution.html
@@ -36,13 +36,17 @@
 
     </header>
 
-    <main class="main">
+    <main class="main main-mod_1">
 
         <h3 class="main_h3">Данные для обратной связи:</h3>
-        <p class="main_p">Евгений</p>
-        <p class="main_p">8 912 854 96 89</p>
-        <p class="main_p">info@3dmenu.ru</p>
-        <p class="main_p">Ижевск</p>
+        <input type="text" class="main_input" placeholder="Название">
+        <input type="text" class="main_input" placeholder="Системное имя">
+        <input type="text" class="main_input" placeholder="Логин">
+        <input type="text" class="main_input" placeholder="Пароль">
+        <input type="text" class="main_input" placeholder="Имя пользователя">
+        <input type="text" class="main_input" placeholder="Телефон">
+        <input type="text" class="main_input" placeholder="Почта">
+        <input type="text" class="main_input" placeholder="Город">
 
     </main>
 
