--- a/admin/main/addModerator.html
+++ b/admin/main/addModerator.html
@@ -36,13 +36,15 @@
 
     </header>
 
-    <main class="main">
+    <main class="main main-mod_1">
 
-        <h3 class="main_h3">Данные для обратной связи:</h3>
-        <p class="main_p">Евгений</p>
-        <p class="main_p">8 912 854 96 89</p>
-        <p class="main_p">info@3dmenu.ru</p>
-        <p class="main_p">Ижевск</p>
+        <h3 class="main_h3">Укажите данные:</h3>
+        <input type="text" class="main_input" placeholder="ФИО">
+        <input type="text" class="main_input" placeholder="Город">
+        <input type="text" class="main_input" placeholder="Почта">
+        <input type="text" class="main_input" placeholder="Телефон">
+        <input type="text" class="main_input" placeholder="Логин">
+        <input type="text" class="main_input" placeholder="Пароль">
 
     </main>
 
