settings.html .main

--- a/admin/main/settings.html
+++ b/admin/main/settings.html
@@ -36,13 +36,13 @@
 
     </header>
 
-    <main class="main">
+    <main class="main main-mod_1">
 
         <h3 class="main_h3">Данные для обратной связи:</h3>
-        <p class="main_p">Евгений</p>
-        <p class="main_p">8 912 854 96 89</p>
-        <p class="main_p">info@3dmenu.ru</p>
-        <p class="main_p">Ижевск</p>
+        <input type="text" class="main_input" placeholder="Имя">
+        <input type="text" class="main_input" placeholder="Телефон">
+        <input type="text" class="main_input" placeholder="Почта">
+        <input type="text" class="main_input" placeholder="Город">
 
     </main>
 
