logs.html .main

--- a/admin/main/logs.html
+++ b/admin/main/logs.html
@@ -36,13 +36,71 @@
 
     </header>
 
-    <main class="main">
+    <main class="main main-mod_2">
 
-        <h3 class="main_h3">Данные для обратной связи:</h3>
-        <p class="main_p">Евгений</p>
-        <p class="main_p">8 912 854 96 89</p>
-        <p class="main_p">info@3dmenu.ru</p>
-        <p class="main_p">Ижевск</p>
+        <header class="main_header">
+            <h3 class="main_h3">Аккаунт</h3>
+            <h3 class="main_h3">Действие</h3>
+            <h3 class="main_h3">Дата</h3>
+        </header>
+
+        <ul class="main_list">
+
+            <li class="main_list_item">
+                <input type="text" class="main_list_item_input" placeholder="Аккаунт 1">
+                <input type="text" class="main_list_item_input" placeholder="Лог 1">
+                <input type="datetime-local" class="main_list_item_input">
+            </li>
+
+            <li class="main_list_item">
+                <input type="text" class="main_list_item_input" placeholder="Аккаунт 2">
+                <input type="text" class="main_list_item_input" placeholder="Лог 2">
+                <input type="datetime-local" class="main_list_item_input">
+            </li>
+
+            <li class="main_list_item">
+                <input type="text" class="main_list_item_input" placeholder="Аккаунт 3">
+                <input type="text" class="main_list_item_input" placeholder="Лог 3">
+                <input type="datetime-local" class="main_list_item_input">
+            </li>
+
+            <li class="main_list_item">
+                <input type="text" class="main_list_item_input" placeholder="Аккаунт 4">
+                <input type="text" class="main_list_item_input" placeholder="Лог 4">
+                <input type="datetime-local" class="main_list_item_input">
+            </li>
+
+            <li class="main_list_item">
+                <input type="text" class="main_list_item_input" placeholder="Аккаунт 5">
+                <input type="text" class="main_list_item_input" placeholder="Лог 5">
+                <input type="datetime-local" class="main_list_item_input">
+            </li>
+
+            <li class="main_list_item">
+                <input type="text" class="main_list_item_input" placeholder="Аккаунт 6">
+                <input type="text" class="main_list_item_input" placeholder="Лог 6">
+                <input type="datetime-local" class="main_list_item_input">
+            </li>
+
+            <li class="main_list_item">
+                <input type="text" class="main_list_item_input" placeholder="Аккаунт 7">
+                <input type="text" class="main_list_item_input" placeholder="Лог 7">
+                <input type="datetime-local" class="main_list_item_input">
+            </li>
+
+            <li class="main_list_item">
+                <input type="text" class="main_list_item_input" placeholder="Аккаунт 8">
+                <input type="text" class="main_list_item_input" placeholder="Лог 8">
+                <input type="datetime-local" class="main_list_item_input">
+            </li>
+
+            <li class="main_list_item">
+                <input type="text" class="main_list_item_input" placeholder="Аккаунт 9">
+                <input type="text" class="main_list_item_input" placeholder="Лог 9">
+                <input type="datetime-local" class="main_list_item_input">
+            </li>
+
+        </ul>
 
     </main>
 
