--- a/admin/main/mail.html
+++ b/admin/main/mail.html
@@ -36,13 +36,40 @@
 
     </header>
 
-    <main class="main">
+    <main class="main main-mod_3">
 
-        <h3 class="main_h3">Данные для обратной связи:</h3>
-        <p class="main_p">Евгений</p>
-        <p class="main_p">8 912 854 96 89</p>
-        <p class="main_p">info@3dmenu.ru</p>
-        <p class="main_p">Ижевск</p>
+        <ul class="main_email">
+            <li class="main_email_li">Клиент 1: текст</li>
+            <li class="main_email_li">Вы: текст</li>
+            <li class="main_email_li">Клиент 1: текст</li>
+            <li class="main_email_li">Вы: текст</li>
+            <li class="main_email_li">Клиент 1: текст</li>
+            <li class="main_email_li">Вы: текст</li>
+            <li class="main_email_li">Клиент 1: текст</li>
+            <li class="main_email_li">Вы: текст</li>
+            <li class="main_email_li">Клиент 1: текст</li>
+            <li class="main_email_li">Вы: текст</li>
+            <li class="main_email_li">Клиент 1: текст</li>
+            <li class="main_email_li">Вы: текст</li>
+            <li class="main_email_li">Клиент 1: текст</li>
+            <li class="main_email_li">Вы: текст</li>
+            <li class="main_email_li">Клиент 1: текст</li>
+            <li class="main_email_li">Вы: текст</li>
+            <li class="main_email_li">Клиент 1: текст</li>
+            <li class="main_email_li">Вы: текст</li>
+            <li class="main_email_li">Клиент 1: текст</li>
+            <li class="main_email_li">Вы: текст</li>
+            <li class="main_email_li">Клиент 1: текст</li>
+            <li class="main_email_li">Вы: текст</li>
+            <li class="main_email_li">Клиент 1: текст</li>
+            <li class="main_email_li">Вы: текст</li>
+            <li class="main_email_li">Клиент 1: текст</li>
+            <li class="main_email_li">Вы: текст</li>
+            <li class="main_email_li">Клиент 1: текст</li>
+            <li class="main_email_li">Вы: текст</li>
+        </ul>
+
+        <textarea class="main_textarea" placeholder="Пример для отправки текста"></textarea>
 
     </main>
 
