fx /admin/main/ Главным образом переход на grid-template-columns/rows

--- a/admin/main/institutions.html
+++ b/admin/main/institutions.html
@@ -106,6 +106,8 @@
             <span class="footer_top_span"></span>
         </div>
         <div class="footer_content">
+            <div></div>
+            <div></div>
             <select class="footer_content_select">
                 <option class="footer_content_option">Ижевск</option>
                 <option class="footer_content_option">Иркутс</option>
