--- a/admin/main/mail.html
+++ b/admin/main/mail.html
@@ -80,7 +80,7 @@
         </div>
         <div class="footer_content">
             <button class="footer_content_button">Отправить</button>
-
+            <div></div>
             <select class="footer_content_select">
                 <option class="footer_content_option">Клиент 1</option>
                 <option class="footer_content_option">Клиент 2</option>
