--- a/admin/main/main.html
+++ b/admin/main/main.html
@@ -16,6 +16,7 @@
 
         <div class="header_top">
             <h2 class="header_top_h2">Главная</h2>
+            <div></div>
             <button class="header_top_button">Выход</button>
             <p class="header_top_p">Администратор</p>
         </div>
