--- a/admin/main/settings.html
+++ b/admin/main/settings.html
@@ -53,6 +53,8 @@
         </div>
         <div class="footer_content">
             <button class="footer_content_button">Сохранить</button>
+            <div></div>
+            <div></div>
         </div>
 
     </footer>
