--- a/admin/main/addInstitution.html
+++ b/admin/main/addInstitution.html
@@ -57,6 +57,8 @@
         </div>
         <div class="footer_content">
             <button class="footer_content_button">Добавить</button>
+            <div></div>
+            <div></div>
         </div>
 
     </footer>
