--- a/admin/main/addModerator.html
+++ b/admin/main/addModerator.html
@@ -55,6 +55,8 @@
         </div>
         <div class="footer_content">
             <button class="footer_content_button">Добавить</button>
+            <div></div>
+            <div></div>
         </div>
 
     </footer>
