--- a/admin/main/logs.html
+++ b/admin/main/logs.html
@@ -111,6 +111,8 @@
         </div>
         <div class="footer_content">
             <button class="footer_content_button">Очистить</button>
+            <div></div>
+            <div></div>
         </div>
 
     </footer>
