/admin/redactor/ about.html .main_top-left

--- a/admin/redactor/about.html
+++ b/admin/redactor/about.html
@@ -41,12 +41,19 @@
 
     <main class="main main_redactor">
 
-        <div class="main_redactor_div main_top-left">1</div>
-        <div class="main_redactor_div main_top-center">2</div>
-        <div class="main_redactor_div main_top-right">3</div>
-        <div class="main_redactor_div main_center">4</div>
-        <div class="main_redactor_div main_right">5</div>
-        <div class="main_redactor_div main_bottom">6</div>
+        <div class="main_redactor_div main_top-left">
+            <input type="text" class="main_top-left_input" placeholder="Тип кухни">
+            <label class="main_top-left_label">
+                Доставка:
+                <input type="checkbox" class="main_top-left_check" checked>
+            </label>
+            <textarea class="main_top-left_textarea" placeholder="Описание"></textarea>
+        </div>
+        <div class="main_redactor_div main_top-center"></div>
+        <div class="main_redactor_div main_top-right"></div>
+        <div class="main_redactor_div main_center"></div>
+        <div class="main_redactor_div main_right"></div>
+        <div class="main_redactor_div main_bottom"></div>
 
     </main>
 
