/admin/redactor/ about.html .main_top-center

--- a/admin/redactor/about.html
+++ b/admin/redactor/about.html
@@ -49,10 +49,22 @@
             </label>
             <textarea class="main_top-left_textarea" placeholder="Описание"></textarea>
         </div>
-        <div class="main_redactor_div main_top-center"></div>
+
+        <div class="main_redactor_div main_top-center">
+            <input type="text" class="main_top-center_input" placeholder="Телефон">
+            <input type="text" class="main_top-center_input" placeholder="Instagram">
+            <input type="text" class="main_top-center_input" placeholder="Сайт">
+            <input type="text" class="main_top-center_input" placeholder="Facebook">
+            <input type="text" class="main_top-center_input" placeholder="VK">
+            <input type="text" class="main_top-center_input" placeholder="Telegram">
+        </div>
+
         <div class="main_redactor_div main_top-right"></div>
+
         <div class="main_redactor_div main_center"></div>
+
         <div class="main_redactor_div main_right"></div>
+
         <div class="main_redactor_div main_bottom"></div>
 
     </main>
