/admin/redactor/ about.html .main_top-right

--- a/admin/redactor/about.html
+++ b/admin/redactor/about.html
@@ -59,7 +59,12 @@
             <input type="text" class="main_top-center_input" placeholder="Telegram">
         </div>
 
-        <div class="main_redactor_div main_top-right"></div>
+        <div class="main_redactor_div main_top-right">
+            <p class="main_top-right_p_1">Иконка заведения:</p>
+            <p class="main_top-right_p_2">Название:</p>
+            <img src="../../res/img/main_top-right_img.png" alt="" class="main_top-right_img">
+            <input type="text" class="main_top-right_input" placeholder="Название заведения">
+        </div>
 
         <div class="main_redactor_div main_center"></div>
 
