--- a/admin/redactor/about.html
+++ b/admin/redactor/about.html
@@ -68,7 +68,20 @@
 
         <div class="main_redactor_div main_center"></div>
 
-        <div class="main_redactor_div main_right"></div>
+        <div class="main_redactor_div main_right">
+
+            <p class="main_right_p_1">Фон</p>
+            <img src="../../res/img/main_right_img.png" alt="" class="main_right_img">
+
+            <p class="main_right_p_2">Загрузка фона</p>
+            <button class="main_right_button_1">Обзор</button>
+            <button class="main_right_button_2">Загрузить</button>
+
+            <p class="main_right_p_3">Загрузка иконки</p>
+            <button class="main_right_button_3">Обзор</button>
+            <button class="main_right_button_4">Загрузить</button>
+
+        </div>
 
         <div class="main_redactor_div main_bottom"></div>
 
