/admin/redactor/ about.html .main_bottom

--- a/admin/redactor/about.html
+++ b/admin/redactor/about.html
@@ -83,7 +83,28 @@
 
         </div>
 
-        <div class="main_redactor_div main_bottom"></div>
+        <div class="main_redactor_div main_bottom">
+
+            <p class="main_bottom_p">Адреса:</p>
+
+            <ul class="main_bottom_ul">
+                <li class="main_bottom_li">
+                    <input type="checkbox" class="main_bottom_li_check" checked>
+                    <input type="text" class="main_bottom_li_input_1">
+                    <input type="text" class="main_bottom_li_input_2">
+                    <input type="text" class="main_bottom_li_input_3">
+                </li>
+                <li class="main_bottom_li">
+                    <input type="checkbox" class="main_bottom_li_check">
+                    <input type="text" class="main_bottom_li_input_1">
+                    <input type="text" class="main_bottom_li_input_2">
+                    <input type="text" class="main_bottom_li_input_3">
+                </li>
+            </ul>
+
+            <button class="main_bottom_button">Добавить</button>
+
+        </div>
 
     </main>
 
