/admin/redactor/ about.html .main_center

--- a/admin/redactor/about.html
+++ b/admin/redactor/about.html
@@ -66,7 +66,42 @@
             <input type="text" class="main_top-right_input" placeholder="Название заведения">
         </div>
 
-        <div class="main_redactor_div main_center"></div>
+        <div class="main_redactor_div main_center">
+
+            <h3 class="main_center_h3">Режим работы заведения:</h3>
+
+            <div class="main_center_table">
+
+                <p class="main_center_table_p"></p>
+                <p class="main_center_table_p">Пн</p>
+                <p class="main_center_table_p">Вт</p>
+                <p class="main_center_table_p">Ср</p>
+                <p class="main_center_table_p">Чт</p>
+                <p class="main_center_table_p">Пт</p>
+                <p class="main_center_table_p">Сб</p>
+                <p class="main_center_table_p">Вс</p>
+
+                <p class="main_center_table_p">с</p>
+                <input type="text" class="main_center_table_input">
+                <input type="text" class="main_center_table_input">
+                <input type="text" class="main_center_table_input">
+                <input type="text" class="main_center_table_input">
+                <input type="text" class="main_center_table_input">
+                <input type="text" class="main_center_table_input">
+                <input type="text" class="main_center_table_input">
+
+                <p class="main_center_table_p">до</p>
+                <input type="text" class="main_center_table_input">
+                <input type="text" class="main_center_table_input">
+                <input type="text" class="main_center_table_input">
+                <input type="text" class="main_center_table_input">
+                <input type="text" class="main_center_table_input">
+                <input type="text" class="main_center_table_input">
+                <input type="text" class="main_center_table_input">
+
+            </div>
+
+        </div>
 
         <div class="main_redactor_div main_right">
 
