--- a/admin/redactor/menu/addMenu.html
+++ b/admin/redactor/menu/addMenu.html
@@ -15,7 +15,7 @@
     <header class="header">
 
         <div class="header_top">
-            <h2 class="header_top_h2">Настройки</h2>
+            <h2 class="header_top_h2">Добавить позицию</h2>
             <button class="header_top_button">Назад</button>
             <button class="header_top_button">Выход</button>
 
@@ -55,13 +55,13 @@
             <span class="footer_top_span"></span>
         </div>
         <div class="footer_content">
-            <button class="footer_content_button">Сохранить</button>
+            <button class="footer_content_button">Добавить</button>
         </div>
 
     </footer>
 
 </section>
 
-<script src="../../js/common.js"></script>
+<script src="../../../js/common.js"></script>
 </body>
 </html>
