/admin/redactor/menu/ .main redMenu.html

--- a/admin/redactor/menu/redMenu.html
+++ b/admin/redactor/menu/redMenu.html
@@ -39,13 +39,27 @@
 
     </header>
 
-    <main class="main main-mod_1">
+    <main class="main main-left_right">
 
-        <h3 class="main_h3">Данные для обратной связи:</h3>
-        <input type="text" class="main_input" placeholder="Имя">
-        <input type="text" class="main_input" placeholder="Телефон">
-        <input type="text" class="main_input" placeholder="Почта">
-        <input type="text" class="main_input" placeholder="Город">
+        <div class="maim_left maim_left-img">
+            <p></p>
+            <img src="../../../res/img/main_top-right_img.png" alt="" class="maim_left-img_img">
+            <h3 class="main_h3">Введите описание:</h3>
+            <input type="text" class="main_input" placeholder="Название">
+            <input type="text" class="main_input" placeholder="Системное имя">
+            <input type="text" class="main_input" placeholder="Цена">
+            <input type="text" class="main_input" placeholder="Состав">
+            <input type="text" class="main_input" placeholder="Вес">
+            <input type="text" class="main_input" placeholder="Группа">
+        </div>
+
+        <div class="main_buttons">
+            <div class="main_buttons_wrapper">
+                <p class="main_buttons_p">Загрузка иконки</p>
+                <button class="main_buttons_btn_1">Обзор</button>
+                <button class="main_buttons_btn_2">Загрузить</button>
+            </div>
+        </div>
 
     </main>
 
