/admin/redactor/menu/ .main menu.html

--- a/admin/redactor/menu/menu.html
+++ b/admin/redactor/menu/menu.html
@@ -39,13 +39,106 @@
 
     </header>
 
-    <main class="main main-mod_1">
+    <main class="main main-left_right">
 
-        <h3 class="main_h3">Данные для обратной связи:</h3>
-        <input type="text" class="main_input" placeholder="Имя">
-        <input type="text" class="main_input" placeholder="Телефон">
-        <input type="text" class="main_input" placeholder="Почта">
-        <input type="text" class="main_input" placeholder="Город">
+        <div class="maim_left">
+            <h3 class="main_h3">Все позиции:</h3>
+
+            <ul class="main_left_ul">
+
+                <li class="main_left_li position">
+                    <div class="position_left">
+                        <p class="position_left_p">1. Блюдо</p>
+                        <img src="../../../res/img/main_top-right_img.png" alt="" class="position_right_img">
+                    </div>
+                    <div class="position_right">
+                        <label class="position_right_label">
+                            Изменить
+                            <input type="checkbox" class="position_right_check">
+                        </label>
+                    </div>
+                </li>
+
+                <li class="main_left_li position">
+                    <div class="position_left">
+                        <p class="position_left_p">2. Блюдо</p>
+                        <img src="../../../res/img/main_top-right_img.png" alt="" class="position_right_img">
+                    </div>
+                    <div class="position_right">
+                        <label class="position_right_label">
+                            Изменить
+                            <input type="checkbox" class="position_right_check">
+                        </label>
+                    </div>
+                </li>
+
+                <li class="main_left_li position">
+                    <div class="position_left">
+                        <p class="position_left_p">3. Блюдо</p>
+                        <img src="../../../res/img/main_top-right_img.png" alt="" class="position_right_img">
+                    </div>
+                    <div class="position_right">
+                        <label class="position_right_label">
+                            Изменить
+                            <input type="checkbox" class="position_right_check">
+                        </label>
+                    </div>
+                </li>
+
+                <li class="main_left_li position">
+                    <div class="position_left">
+                        <p class="position_left_p">4. Блюдо</p>
+                        <img src="../../../res/img/main_top-right_img.png" alt="" class="position_right_img">
+                    </div>
+                    <div class="position_right">
+                        <label class="position_right_label">
+                            Изменить
+                            <input type="checkbox" class="position_right_check">
+                        </label>
+                    </div>
+                </li>
+
+                <li class="main_left_li position">
+                    <div class="position_left">
+                        <p class="position_left_p">5. Блюдо</p>
+                        <img src="../../../res/img/main_top-right_img.png" alt="" class="position_right_img">
+                    </div>
+                    <div class="position_right">
+                        <label class="position_right_label">
+                            Изменить
+                            <input type="checkbox" class="position_right_check">
+                        </label>
+                    </div>
+                </li>
+
+                <li class="main_left_li position">
+                    <div class="position_left">
+                        <p class="position_left_p">6. Блюдо</p>
+                        <img src="../../../res/img/main_top-right_img.png" alt="" class="position_right_img">
+                    </div>
+                    <div class="position_right">
+                        <label class="position_right_label">
+                            Изменить
+                            <input type="checkbox" class="position_right_check">
+                        </label>
+                    </div>
+                </li>
+
+            </ul>
+        </div>
+
+        <div class="main_buttons">
+            <div class="main_buttons_wrapper">
+                <p class="main_buttons_p">Загрузка моделей Android</p>
+                <button class="main_buttons_btn_1">Обзор</button>
+                <button class="main_buttons_btn_2">Загрузить</button>
+            </div>
+            <div class="main_buttons_wrapper">
+                <p class="main_buttons_p">Загрузка моделей IOS</p>
+                <button class="main_buttons_btn_1">Обзор</button>
+                <button class="main_buttons_btn_2">Загрузить</button>
+            </div>
+        </div>
 
     </main>
 
