--- a/admin/redactor/about.html
+++ b/admin/redactor/about.html
@@ -15,7 +15,7 @@
     <header class="header">
 
         <div class="header_top">
-            <h2 class="header_top_h2">Настройки</h2>
+            <h2 class="header_top_h2">О заведении</h2>
             <button class="header_top_button">Назад</button>
             <button class="header_top_button">Выход</button>
 
