admin/redactor/*/* Добавлен span в разметку названия заведения

--- a/admin/redactor/main.html
+++ b/admin/redactor/main.html
@@ -19,7 +19,7 @@
             <div></div>
             <button class="header_top_button">Выход</button>
 
-            <p class="header_top_p">Бар "Бочка" | bar_bochka</p>
+            <p class="header_top_p">Бар "Бочка" <span class="header_top_p_span"> | bar_bochka</span></p>
             <div></div>
             <p class="header_top_p">Администратор</p>
         </div>
