admin/redactor/main.html Поле выбора поставлено на своё место

--- a/admin/redactor/main.html
+++ b/admin/redactor/main.html
@@ -62,6 +62,7 @@
         <div class="footer_content">
             <div></div>
             <div></div>
+            <div></div>
             <select class="footer_content_select">
                 <option class="footer_content_option">Отображается</option>
                 <option class="footer_content_option">Не отображается</option>
