Кнопки в навигационном меню заменены на ссылки

--- a/admin/main/main.html
+++ b/admin/main/main.html
@@ -17,17 +17,17 @@
         <div class="header_top">
             <h2 class="header_top_h2">Главная</h2>
             <div></div>
-            <button class="header_top_button">Выход</button>
+            <a href="#" class="header_top_button">Выход</a>
             <p class="header_top_p">Администратор</p>
         </div>
 
         <nav class="header_nav">
-            <button class="header_nav_button">Все заведения</button>
-            <button class="header_nav_button">Логи</button>
-            <button class="header_nav_button">Добавить Модератора</button>
-            <button class="header_nav_button">Почта</button>
-            <button class="header_nav_button">Настройки</button>
-            <button class="header_nav_button">Добавить Заведение</button>
+            <a href="#" class="header_nav_button">Все заведения</a>
+            <a href="#" class="header_nav_button">Логи</a>
+            <a href="#" class="header_nav_button">Добавить Модератора</a>
+            <a href="#" class="header_nav_button">Почта</a>
+            <a href="#" class="header_nav_button">Настройки</a>
+            <a href="#" class="header_nav_button">Добавить Заведение</a>
         </nav>
 
         <div class="header_bottom">
