--- a/admin/redactor/main.html
+++ b/admin/redactor/main.html
@@ -17,7 +17,7 @@
         <div class="header_top">
             <h2 class="header_top_h2">Главная</h2>
             <div></div>
-            <button class="header_top_button">Выход</button>
+            <a href="#" class="header_top_button">Выход</a>
 
             <p class="header_top_p">Бар "Бочка" <span class="header_top_p_span"> | bar_bochka</span></p>
             <div></div>
@@ -25,12 +25,12 @@
         </div>
 
         <nav class="header_nav">
-            <button class="header_nav_button blocked">Premium</button>
-            <button class="header_nav_button blocked">Доставка</button>
-            <button class="header_nav_button blocked">WEB-Viever</button>
-            <button class="header_nav_button">3D Меню</button>
-            <button class="header_nav_button">О заведении</button>
-            <button class="header_nav_button">Настройки</button>
+            <a href="#" class="header_nav_button blocked">Premium</a>
+            <a href="#" class="header_nav_button blocked">Доставка</a>
+            <a href="#" class="header_nav_button blocked">WEB-Viever</a>
+            <a href="#" class="header_nav_button">3D Меню</a>
+            <a href="#" class="header_nav_button">О заведении</a>
+            <a href="#" class="header_nav_button">Настройки</a>
         </nav>
 
         <div class="header_bottom">
