Удалены все placeholder

--- a/admin/main/addModerator.html
+++ b/admin/main/addModerator.html
@@ -39,12 +39,12 @@
     <main class="main main-mod_1">
 
         <h3 class="main_h3">Укажите данные:</h3>
-        <input type="text" class="main_input" placeholder="ФИО">
-        <input type="text" class="main_input" placeholder="Город">
-        <input type="text" class="main_input" placeholder="Почта">
-        <input type="text" class="main_input" placeholder="Телефон">
-        <input type="text" class="main_input" placeholder="Логин">
-        <input type="text" class="main_input" placeholder="Пароль">
+        <input type="text" class="main_input">
+        <input type="text" class="main_input">
+        <input type="text" class="main_input">
+        <input type="text" class="main_input">
+        <input type="text" class="main_input">
+        <input type="text" class="main_input">
 
     </main>
 
