--- a/admin/main/logs.html
+++ b/admin/main/logs.html
@@ -47,56 +47,56 @@
         <ul class="main_list">
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input" placeholder="Аккаунт 1">
-                <input type="text" class="main_list_item_input" placeholder="Лог 1">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
                 <input type="datetime-local" class="main_list_item_input">
             </li>
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input" placeholder="Аккаунт 2">
-                <input type="text" class="main_list_item_input" placeholder="Лог 2">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
                 <input type="datetime-local" class="main_list_item_input">
             </li>
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input" placeholder="Аккаунт 3">
-                <input type="text" class="main_list_item_input" placeholder="Лог 3">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
                 <input type="datetime-local" class="main_list_item_input">
             </li>
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input" placeholder="Аккаунт 4">
-                <input type="text" class="main_list_item_input" placeholder="Лог 4">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
                 <input type="datetime-local" class="main_list_item_input">
             </li>
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input" placeholder="Аккаунт 5">
-                <input type="text" class="main_list_item_input" placeholder="Лог 5">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
                 <input type="datetime-local" class="main_list_item_input">
             </li>
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input" placeholder="Аккаунт 6">
-                <input type="text" class="main_list_item_input" placeholder="Лог 6">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
                 <input type="datetime-local" class="main_list_item_input">
             </li>
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input" placeholder="Аккаунт 7">
-                <input type="text" class="main_list_item_input" placeholder="Лог 7">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
                 <input type="datetime-local" class="main_list_item_input">
             </li>
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input" placeholder="Аккаунт 8">
-                <input type="text" class="main_list_item_input" placeholder="Лог 8">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
                 <input type="datetime-local" class="main_list_item_input">
             </li>
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input" placeholder="Аккаунт 9">
-                <input type="text" class="main_list_item_input" placeholder="Лог 9">
+                <input type="text" class="main_list_item_input">
+                <input type="text" class="main_list_item_input">
                 <input type="datetime-local" class="main_list_item_input">
             </li>
 
