--- a/admin/main/mail.html
+++ b/admin/main/mail.html
@@ -69,7 +69,7 @@
             <li class="main_email_li">Вы: текст</li>
         </ul>
 
-        <textarea class="main_textarea" placeholder="Пример для отправки текста"></textarea>
+        <textarea class="main_textarea"></textarea>
 
     </main>
 
