--- a/admin/main/settings.html
+++ b/admin/main/settings.html
@@ -39,10 +39,10 @@
     <main class="main main-mod_1">
 
         <h3 class="main_h3">Данные для обратной связи:</h3>
-        <input type="text" class="main_input" placeholder="Имя">
-        <input type="text" class="main_input" placeholder="Телефон">
-        <input type="text" class="main_input" placeholder="Почта">
-        <input type="text" class="main_input" placeholder="Город">
+        <input type="text" class="main_input">
+        <input type="text" class="main_input">
+        <input type="text" class="main_input">
+        <input type="text" class="main_input">
 
     </main>
 
