--- a/admin/redactor/menu/addMenu.html
+++ b/admin/redactor/menu/addMenu.html
@@ -43,12 +43,12 @@
 
         <div class="maim_left">
             <h3 class="main_h3">Введите описание:</h3>
-            <input type="text" class="main_input" placeholder="Название">
-            <input type="text" class="main_input" placeholder="Системное имя">
-            <input type="text" class="main_input" placeholder="Цена">
-            <input type="text" class="main_input" placeholder="Состав">
-            <input type="text" class="main_input" placeholder="Вес">
-            <input type="text" class="main_input" placeholder="Группа">
+            <input type="text" class="main_input">
+            <input type="text" class="main_input">
+            <input type="text" class="main_input">
+            <input type="text" class="main_input">
+            <input type="text" class="main_input">
+            <input type="text" class="main_input">
         </div>
 
         <div class="main_buttons">
