--- a/admin/main/addInstitution.html
+++ b/admin/main/addInstitution.html
@@ -39,14 +39,14 @@
     <main class="main main-mod_1">
 
         <h3 class="main_h3">Данные для обратной связи:</h3>
-        <input type="text" class="main_input" placeholder="Название">
-        <input type="text" class="main_input" placeholder="Системное имя">
-        <input type="text" class="main_input" placeholder="Логин">
-        <input type="text" class="main_input" placeholder="Пароль">
-        <input type="text" class="main_input" placeholder="Имя пользователя">
-        <input type="text" class="main_input" placeholder="Телефон">
-        <input type="text" class="main_input" placeholder="Почта">
-        <input type="text" class="main_input" placeholder="Город">
+        <input type="text" class="main_input">
+        <input type="text" class="main_input">
+        <input type="text" class="main_input">
+        <input type="text" class="main_input">
+        <input type="text" class="main_input">
+        <input type="text" class="main_input">
+        <input type="text" class="main_input">
+        <input type="text" class="main_input">
 
     </main>
 
