--- a/admin/redactor/about.html
+++ b/admin/redactor/about.html
@@ -42,21 +42,21 @@
     <main class="main main_redactor">
 
         <div class="main_redactor_div main_top-left">
-            <input type="text" class="main_top-left_input" placeholder="Тип кухни">
+            <input type="text" class="main_top-left_input">
             <label class="main_top-left_label">
                 Доставка:
                 <input type="checkbox" class="main_top-left_check" checked>
             </label>
-            <textarea class="main_top-left_textarea" placeholder="Описание"></textarea>
+            <textarea class="main_top-left_textarea"></textarea>
         </div>
 
         <div class="main_redactor_div main_top-center">
-            <input type="text" class="main_top-center_input" placeholder="Телефон">
-            <input type="text" class="main_top-center_input" placeholder="Instagram">
-            <input type="text" class="main_top-center_input" placeholder="Сайт">
-            <input type="text" class="main_top-center_input" placeholder="Facebook">
-            <input type="text" class="main_top-center_input" placeholder="VK">
-            <input type="text" class="main_top-center_input" placeholder="Telegram">
+            <input type="text" class="main_top-center_input">
+            <input type="text" class="main_top-center_input">
+            <input type="text" class="main_top-center_input">
+            <input type="text" class="main_top-center_input">
+            <input type="text" class="main_top-center_input">
+            <input type="text" class="main_top-center_input">
         </div>
 
         <div class="main_redactor_div main_center">
@@ -101,7 +101,7 @@
             <p class="main_top-right_p_1">Иконка заведения:</p>
             <p class="main_top-right_p_2">Название:</p>
             <img src="../../res/img/main_top-right_img.png" alt="" class="main_top-right_img">
-            <input type="text" class="main_top-right_input" placeholder="Название заведения">
+            <input type="text" class="main_top-right_input">
 
             <p class="main_right_p_1">Фон</p>
             <img src="../../res/img/main_right_img.png" alt="" class="main_right_img">
