admin/main/logs.html .main Все input в p

--- a/admin/main/logs.html
+++ b/admin/main/logs.html
@@ -47,57 +47,57 @@
         <ul class="main_list">
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input">
-                <input type="text" class="main_list_item_input">
-                <input type="datetime-local" class="main_list_item_input">
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
             </li>
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input">
-                <input type="text" class="main_list_item_input">
-                <input type="datetime-local" class="main_list_item_input">
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
             </li>
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input">
-                <input type="text" class="main_list_item_input">
-                <input type="datetime-local" class="main_list_item_input">
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
             </li>
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input">
-                <input type="text" class="main_list_item_input">
-                <input type="datetime-local" class="main_list_item_input">
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
             </li>
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input">
-                <input type="text" class="main_list_item_input">
-                <input type="datetime-local" class="main_list_item_input">
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
             </li>
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input">
-                <input type="text" class="main_list_item_input">
-                <input type="datetime-local" class="main_list_item_input">
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
             </li>
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input">
-                <input type="text" class="main_list_item_input">
-                <input type="datetime-local" class="main_list_item_input">
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
             </li>
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input">
-                <input type="text" class="main_list_item_input">
-                <input type="datetime-local" class="main_list_item_input">
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
             </li>
 
             <li class="main_list_item">
-                <input type="text" class="main_list_item_input">
-                <input type="text" class="main_list_item_input">
-                <input type="datetime-local" class="main_list_item_input">
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
+                <p class="main_list_item_input"></p>
             </li>
 
         </ul>
